# serving-agent

./: .gitignore  AGENTS.md  Cargo.toml
docs/: adr-rethink-features.md
draft/: kv_cache_management_report.md  rust_llm_server_design_v4.md  rust_llm_server_design_v8.md
kv-cache/: Cargo.toml
kv-cache/src/: block_manager.rs  npu_memory.rs  radix_tree.rs
rustBindings/aclnn-sys/: Cargo.toml  build.rs
rustBindings/aclnn-sys/src/: activation.rs  attention.rs  common.rs  elementwise.rs  embedding.rs  matmul.rs  paged_attention.rs  permute.rs  reduction.rs  rmsnorm.rs  rope.rs
rustBindings/ascend/: Cargo.toml
rustBindings/ascend/src/: comm.rs  device.rs  error.rs  lib.rs  memory.rs  stream.rs  tensor.rs
rustBindings/ascend/src/ops/: activation.rs  attention.rs  elementwise.rs  embedding.rs  matmul.rs  paged_attention.rs  permute.rs  reduction.rs  rmsnorm.rs  rope.rs
rustBindings/ascend/tests/: integration.rs
rustBindings/ascendcl-sys/: Cargo.toml  build.rs
rustBindings/ascendcl-sys/src/: memory.rs  runtime.rs
rustBindings/hccl-sys/: Cargo.toml  build.rs
rustBindings/hccl-sys/src/: lib.rs  types.rs
rust_llm_server/: Cargo.toml
rust_llm_server/examples/: hccl_cpp_test.cpp  hccl_smoke_test.rs  run_hccl_cpp_test.sh
rust_llm_server/src/: lib.rs  main.rs
rust_llm_server/src/distributed/: mod.rs  process_group.rs
rust_llm_server/src/engine/: debug_dump.rs  engine.rs  kv_cache.rs  mod.rs  perf.rs  plan.rs
rust_llm_server/src/model/: config.rs  device_tensor.rs  network.rs  parallel.rs  quantize.rs  scratch_arena.rs  tensor.rs  weights.rs
rust_llm_server/src/ops/: ascend.rs  ascend_comm.rs  mod.rs
rust_llm_server/src/scheduler/: mod.rs
rust_llm_server/src/server/: mod.rs
rust_llm_server/tests/: npu_ops.rs
scripts/: check  env.example  fix  hccl-cpp-test  run-one-shot  test-cpu  test-npu  test-npu-2
scripts/lib/: common.sh  hccl-cpp-test-run  test-npu-2-run
