[workspace]
resolver = "2"
members = [
    "rust_llm_server",
    "kv-cache",
    "rustBindings/ascend",
    "rustBindings/ascendcl-sys",
    "rustBindings/aclnn-sys",
    "rustBindings/hccl-sys",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_unsafe_on_extern = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"
unreachable_pub = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# cargo_common_metadata — internal workspace crates, never published to crates.io.
# Add metadata to individual Cargo.toml files if publishing.
# cargo_common_metadata = "warn"

# unwrap_used / expect_used — removed from workspace lints because they're
# too noisy in test code where .unwrap() is idiomatic. For production code,
# add #[allow()] on a case-by-case basis where invariants are provably safe.
# unwrap_used = "warn"
# expect_used = "warn"
# panic — too strict for build scripts where panic!() is the standard
# idiom for "you can't compile without this". We use per-build.rs allows instead.
# panic = "warn"
# indexing_slicing — too strict: bans all [] access even when provably safe.
# Re-enable only if we switch to iterator-only style.

# Safety
# undocumented_unsafe_blocks — removed from workspace lints because it's too strict
# for incremental migration. The lint is still available for manual use.
# undocumented_unsafe_blocks = "warn"

# Debug artifacts
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Numeric casts — commented out due to too many pre-existing violations
# in NPU FFI bindings. Re-enable one-by-one as code is audited.
# cast_possible_truncation = "warn"
# cast_possible_wrap = "warn"
# cast_sign_loss = "warn"
# cast_precision_loss = "warn"
cast_lossless = "warn"

# Match exhaustiveness
wildcard_enum_match_arm = "warn"

# Edition 2024 specific
large_stack_frames = "warn"
std_instead_of_core = "warn"

# Too many arguments — FFI wrappers naturally exceed the default 7-arg limit.
too_many_arguments = "allow"

# not_unsafe_ptr_arg_deref — public fn that touches raw pointers without
# being `unsafe`. Realistic for internal wrappers over FFI.
not_unsafe_ptr_arg_deref = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
