[package]
name = "ascend"
version = "0.1.0"
edition = "2024"
description = "Safe Rust wrappers for Ascend NPU (AscendCL + aclnn operators)"
license = "Apache-2.0"

[dependencies]
ascendcl-sys = { path = "../ascendcl-sys" }
aclnn-sys = { path = "../aclnn-sys" }
hccl-sys = { path = "../hccl-sys" }
thiserror = "1"

[features]

[lints]
workspace = true
